<resources>

    <!--    base texts-->
    <string name="empty">Null</string>
    <string name="app_name">Recreation Center app</string>
    <string name="title_home">Home</string>
    <string name="title_event">Play</string>
    <string name="title_play">Play</string>
    <string name="title_post">Learn</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>


    <!--    Welcome Page-->

    <string name="welcomeBtn">Let\'s get started</string>
    <string name="welcomeMsg">Welcome</string>
    <string name="goBack">Go back to App</string>

    <!--    Login Page-->
    <string name="emailHint">Email address</string>
    <string name="passHint">Password</string>
    <string name="or">OR</string>
    <string name="google">Sign in with Google</string>
    <string name="facebook">Facebook</string>
    <string name="registerHint">Don\'t have an account?</string>
    <string name="registerLink">Click here to Sign up</string>
    <string name="signIn">Sign in</string>
    <string name="forgotPassword">Forgot Password?</string>

    <!--    Register Page-->
    <string name="fNameHint">First name</string>
    <string name="lNameHint">Last name</string>
    <string name="phoneHint">Phone number</string>
    <string name="reg_registerHint">Already have an account?</string>
    <string name="reg_registerLink">Click here to Sign in</string>
    <string name="createAcc">Register</string>

    <!--    Activity Page-->
    <string name="create_activity">Create Activity</string>
    <string name="your_activities">Your Activities</string>
    <string name="list_of_activities">List of Activities</string>
    <string name="playpals">Playpals</string>
    <string name="date">Date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="user_name">User name</string>
    <string name="sport_type">Sport type</string>

    <!-- Create Activity-->
    <string name="choose_date">Choose date...</string>
    <string name="choose_start_time">Choose start time...</string>
    <string name="choose_end_time">Choose end time...</string>
    <string name="type_friends">Type your friend name here</string>
    <string name="invited_friends">Invited friends</string>
    <string name="add">Add</string>


    <string-array name="sport_types">
        <item>Basketball</item>
        <item>Badminton</item>
        <item>Tennis</item>
        <item>Rock Climbing</item>
        <item>Aerobic</item>
        <item>Soccer</item>
    </string-array>

<!--    Profile Page-->
    <string name="updateProfile">Update profile</string>
    <string name="editProfile">Edit profile</string>
    <string name='logout'>Logout</string>

<!-- Calendar Page -->
    <string name="time_12am">12 am</string>
    <string name="time_1am">1 am</string>
    <string name="time_2am">2 am</string>
    <string name="time_3am">3 am</string>
    <string name="time_4am">4 am</string>
    <string name="time_5am">5 am</string>
    <string name="time_6am">6 am</string>
    <string name="time_7am">7 am</string>
    <string name="time_8am">8 am</string>
    <string name="time_9am">9 am</string>
    <string name="time_10am">10 am</string>
    <string name="time_11am">11 am</string>
    <string name="time_12pm">12 pm</string>
    <string name="time_13pm">13 pm</string>
    <string name="time_14pm">14 pm</string>
    <string name="time_15pm">15 pm</string>
    <string name="time_16pm">16 pm</string>
    <string name="time_17pm">17 pm</string>
    <string name="time_18pm">18 pm</string>
    <string name="time_19pm">19 pm</string>
    <string name="time_20pm">20 pm</string>
    <string name="time_21pm">21 pm</string>
    <string name="time_22pm">22 pm</string>
    <string name="time_23pm">23 pm</string>
    <string name="time_24pm">24 pm</string>
    <string name="birth_day">I am going to birthday party</string>
    <string name="current_day_date">24 September, 2020</string>
</resources>
