<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_sport_activity"
        android:icon="@drawable/play_icon"
        android:title="@string/title_play" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/learn_icon"
        android:title="@string/title_post" />

    <item android:id="@+id/navigation_calendar"
        android:icon="@drawable/calendar_icon"
        android:title="@string/title_calendar" />

    <item android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile" />

</menu>