<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginRight="15dp" >

    <TableLayout
        android:id="@+id/table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <TableRow
            android:layout_margin="5dp"
            android:padding="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/sport_type"
                android:textStyle="bold|italic"
                android:layout_width="wrap_content"/>

            <Spinner
                android:id ="@+id/spr_sport_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:entries="@array/sport_types"
                />
        </TableRow>

        <TableRow
            android:layout_margin="5dp"
            android:padding="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:layout_width="wrap_content"/>
            <Button
                android:id="@+id/btn_date_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/choose_date"
                />
        </TableRow>

        <TableRow
            android:layout_margin="5dp"
            android:padding="5dp">

            <TextView
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/start_time"
                android:textStyle="bold|italic"
                android:layout_width="wrap_content"/>

            <Button
                android:id="@+id/btn_starting_time_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/choose_start_time"/>
        </TableRow>

        <TableRow
            android:layout_margin="5dp"
            android:padding="5dp">

            <TextView
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/end_time"
                android:textStyle="bold|italic"
                android:layout_width="wrap_content"/>

            <Button
                android:id="@+id/btn_ending_time_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_end_time"/>
        </TableRow>

        <TableRow
            android:layout_margin="5dp"
            android:padding="5dp">

            <TextView
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/playpals"
                android:textStyle="bold|italic"
                android:layout_width="wrap_content"/>

            <AutoCompleteTextView
                android:id="@+id/playpals_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/type_friends"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp" />

        </TableRow>

        <TableRow
            android:layout_margin="5dp"
            android:padding="5dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/invited_friends"
                android:textStyle="bold|italic"
                android:textSize="18sp">
            </TextView>

            <ListView
                android:id="@+id/playpals_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/playpals"
                android:textSize="14sp"></ListView>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/create_activity"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>