<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/empty"
        android:layout_gravity="center"
        android:src="@drawable/logo_miu"
        android:layout_marginTop="30dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textInputStyle" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textInputStyle"  >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passHint" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="2"
            android:contentDescription="@string/empty"
            android:layerType="software"
            android:src="@drawable/stroke" />

        <TextView
            android:id="@+id/orText"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/or" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:src="@drawable/stroke"
            android:layerType="software"
            android:layout_weight="2"
            android:contentDescription="@string/empty"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/googleBtn"
            android:onClick="googleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            app:icon="@drawable/logo_google"
            app:iconSize="24dp"
            app:iconTint="@null"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:text="@string/google"
             />

        <Button
            android:id="@+id/facebookBtn"
            android:onClick="facebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/facebook"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            app:icon="@drawable/logo_fb"
            app:iconSize="24dp"
            app:iconTint="@null"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/registerHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registerHint"
            android:textColor="@color/colorPrimary"
            android:layout_above="@+id/registerLink"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/registerLink"
            android:onClick="register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registerLink"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"/>

    </RelativeLayout>



</LinearLayout>