<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars"
            app:civ_border_width="2dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:civ_border_color="#FFFFFF"/>


            <TextView
                android:id="@+id/name_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:text="@string/title_profile" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textInputStyle"
            android:enabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:textColor="@drawable/edit_text_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailHint" />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fnameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textInputStyle"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fnameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fNameHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lnameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textInputStyle"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lnameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lNameHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textInputStyle"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneInput"
                    android:textColor="@drawable/edit_text_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneHint"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updateProfile"
                style="@style/btnStyle30"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editProfile"
                style="@style/btnStyle30"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/logout_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                style="@style/btnStyle30"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:backgroundTint="@color/colorRed"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>