<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/eventView"
    android:layout_marginBottom="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding = "15dp">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_user"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="20dp"
            android:text="@string/user_name" />

        <ImageView
            android:id="@+id/ic_date"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginRight="205dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_calendar_alt" />

        <TextView
            android:id="@+id/date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/date"/>

        <ImageView
            android:id="@+id/ic_time"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginRight="205dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ic_date"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_clock" />

        <TextView
            android:id="@+id/timeInfo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingTop="5dp"
            android:text="@string/start_time"/>

        <ImageView
            android:id="@+id/ic_playpals"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginRight="205dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ic_time"
            android:src="@drawable/ic_user_friends" />

        <TextView
            android:id="@+id/playpals"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeInfo"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:paddingTop="5dp"
            android:text="@string/playpals" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>